--- a/Form/war/WEB-INF/web.xml
+++ b/Form/war/WEB-INF/web.xml
@@ -5,14 +5,14 @@
 		  http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          version="3.0">
 
-    <!--<servlet>
+ <!--   <servlet>
         <servlet-name>gwtService</servlet-name>
         <servlet-class>com.upwork.gwt.server.gwtServiceImpl</servlet-class>
-    </servlet>-->
-    <!--   <servlet-mapping>
-           <servlet-name>gwtService</servlet-name>
-           <url-pattern>/gwt/gwtService</url-pattern>
-       </servlet-mapping>-->
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>gwtService</servlet-name>
+        <url-pattern>/gwt/gwtService</url-pattern>
+    </servlet-mapping>-->
 
     <welcome-file-list>
         <welcome-file>Form.html</welcome-file>
